<resources>
    <string name="app_name" translatable="false">Barcode Storage</string>

    <string name="decoder_string">Text</string>
    <string name="decoder_hex">Raw Data (Hex)</string>
    <string name="decoder_base64">Raw Data (Base64)</string>
    <string name="decoder_uic">UIC 918.* (Railway Ticket)</string>
    <string name="decoder_vdv">VDV-KA (Railway Ticket)</string>

    <string name="desc_about">About</string>
    <string name="desc_code_image">Generated Code</string>
    <string name="desc_contribution_caption">Contributors</string>
    <string name="desc_copy">Copy Content</string>
    <string name="desc_decode">Decode</string>
    <string name="desc_decoded">Decoded Content</string>
    <string name="desc_decoder">Decoder</string>
    <string name="desc_format">Barcode Format</string>
    <string name="desc_gallery">Barcode Gallery</string>
    <string name="desc_recticle">Crosshair</string>
    <string name="desc_scanner">Scanner</string>
    <string name="desc_settings">Settings</string>
    <string name="desc_view">View</string>

    <string name="msg_change_name">Enter the new name:</string>
    <string name="msg_copy">Saved decoded content to clipboard!</string>
    <string name="msg_error_encode">Error when encoding the barcode. Can not display this format.</string>

    <string name="option_confirm">Confirm</string>
    <string name="option_decline">Decline</string>

    <string name="placeholder_id">Code ID</string>
    <string name="placeholder_timestamp">Timestamp</string>

    <!--TODO: Add yourself if you add/change/fix something :)-->
    <string name="list_contributors" translatable="false">
        Kilian Krampf\n
    </string>

    <array name="list_test">
        <item>a</item>
        <item>b</item>
        <item>c</item>
    </array>
</resources>