<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_gallery"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialCardViewFilledStyle"
        android:layout_margin="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:padding="5dp">

            <ImageView
                android:id="@+id/card_gallery_code_img"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/symbol_image_loading"
                android:contentDescription="@string/desc_code_image" />

            <TextView
                android:id="@+id/card_gallery_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_id"
                android:lines="4"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/card_gallery_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_timestamp"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <Button
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"

                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:insetLeft="5dp"
                android:insetRight="5dp"
                app:icon="@drawable/symbol_delete"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                android:padding="0dp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>
