<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp">

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        style="?attr/textInputFilledStyle"-->
<!--        android:id="@+id/input_decoder_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:hint="@string/desc_decoder">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/input_decoder_field"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="none" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->
    <Spinner
        android:id="@+id/input_decoder_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/desc_format" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/input_decoder_field">

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:id="@+id/input_decoder_res_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc_decoded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_decoder_res_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/copy_decoded"
        style="@style/Widget.Material3.FloatingActionButton.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/symbol_copy"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/desc_copy" />

</RelativeLayout>