<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_above="@id/bottomnav_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="90dp"
            android:adjustViewBounds="true"
            android:background="@drawable/blue_circle"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/about_appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_below="@id/about_logo"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/about_contributors_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_above="@id/about_contributors_list_view"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:text="@string/desc_contribution_caption" />

        <ScrollView
            android:id="@+id/about_contributors_list_view"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/about_contributors_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:text="@string/list_contributors"
                android:gravity="center"
                />
        </ScrollView>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnav_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/main" />

</RelativeLayout>