<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <ImageView
            android:id="@+id/code_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/symbol_image_loading"
            android:contentDescription="@string/desc_code_image" />

        <RelativeLayout
            android:id="@+id/zoom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_below="@id/code_img">

            <ImageView
                android:id="@+id/img_zoom_minus"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@id/zoom_slider"
                android:layout_alignBottom="@id/zoom_slider"
                app:tint="?colorPrimary"
                app:srcCompat="@drawable/symbol_zoom_minus" />

            <com.google.android.material.slider.Slider
                android:id="@+id/zoom_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_zoom_minus"
                android:layout_toStartOf="@id/img_zoom_plus" />

            <ImageView
                android:id="@+id/img_zoom_plus"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/zoom_slider"
                android:layout_alignBottom="@id/zoom_slider"
                app:tint="?colorPrimary"
                app:srcCompat="@drawable/symbol_zoom_plus" />
        </RelativeLayout>

        <Spinner
            android:id="@+id/input_format_field"
            android:layout_below="@id/zoom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:hint="@string/desc_format" />

        <TextView
            android:id="@+id/code_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_format_field"
            android:layout_toStartOf="@id/btn_rename"
            android:text="@string/placeholder_id"
            android:lines="3"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textSize="15sp" />

        <Button
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"

            android:id="@+id/btn_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/zoom_layout"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/code_name"
            android:layout_alignBottom="@id/code_name"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            app:icon="@drawable/symbol_edit"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            android:padding="0dp" />

        <TextView
            android:id="@+id/code_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/code_name"
            android:text="@string/placeholder_timestamp"
            android:textSize="12sp" />

    </RelativeLayout>
</ScrollView>